# r2r-khaki-avatar-feature

./: .gitignore  README.md  topology.yml
.kiro/specs/pet-avatar-generation/: design.md  requirements.md  tasks.md
.kiro/steering/: agent-sop-format.md  angular-conventions.md  angular-steering.md  cdk-best-practices.md  cdk-steering.md  examples-guide.md  python-best-practices.md  python-steering.md  topology-creation.md
docs/: POSTMAN_GUIDE.md
petavatar-agent/: README.md  agent.py  pyproject.toml
petavatar-agent/scripts/: deploy-agentcore.sh
petavatar-agent/tools/: __init__.py  analyze_pet.py  generate_avatar.py  generate_identity.py  map_career.py
presigned-url-handler/: handler.py
process-handler/: handler.py
process-worker/: handler.py
result-handler/: handler.py
s3-event-handler/: handler.py
scripts/: create-infrastructure.py  set-lambda-env.sh  test-api-flow.py
scripts/iam-policies/: README.md  petavatar-lambda-policy.json
src/security/: __init__.py  api_middleware.py  api_security.py  dynamodb_security.py  s3_security.py
src/utils/: __init__.py  error_handling.py
status-handler/: handler.py
